[tool.poetry]
name = "contact-book"
version = "0.1.0"
description = ""
authors = ["hossein"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.9"
pysqlite3 = "^0.4.6"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
